# summer_school_supervisor

./: CMakeLists.txt  README.md  package.xml
.ci/: install.sh
include/summer_school_supervisor/: message_utils.h
launch/: supervisor.launch
rviz/: example.rviz
scripts/: generate_trajectory.py
src/: follower_old.cpp  message_utils.cpp  supervisor.cpp
tmux/custom_configs/: constraint_manager.yaml  uav_manager.yaml
tmux/follower/: tmux.sh
tmux/leader/: tmux.sh
